force-app/main/default/objects/FieloCH__MissionChallenge__c/FieloCH__MissionChallenge__c.object-meta.xml
<CustomObject>
    <label>Mission Challenge</label>
    <nameField>
        <displayFormat>MCH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missions Challenge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>