force-app/main/default/objects/FieloCH__MissionChallenge__c/fields/FieloCH__Mission__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Mission__c</fullName>
    <label>Mission</label>
    <referenceTo>FieloCH__Mission__c</referenceTo>
    <relationshipLabel>Missions Challenge</relationshipLabel>
    <relationshipName>MissionsChallenge</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>