force-app/main/default/objects/FieloCH__MissionChallenge__c/fields/FieloCH__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Order__c</fullName>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>